# componenthost

./: Cargo.toml  README.md  greeter.wasm  reader.wasm
src/: main.rs
wit/: world.wit
